dist/manifests/kubernetes-cluster-manifests/rsyslog-centralized/5rsyslog-centralized.deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rsyslog-centralized
  namespace: kube-system
  labels:
    k8s-app: rsyslog-centralized
    version: latest
    kubernetes.io/cluster-service: "true"
spec:
  replicas: 3

  # selector:
  #  matchLabels:
  template:
    metadata:
      labels:
        k8s-app: rsyslog-centralized
        version: latest
        kubernetes.io/cluster-service: "true"

      # annotations:
    spec:
      serviceAccountName: rsyslog-centralized
      containers:
      - name: rsyslog-centralized
        image: bossjones/rsyslog:latest
        # command:

        volumeMounts:
        # rsyslog work files; do not share with multiple instances
        - name: work
          mountPath: /work
        # log file store (if used)
        - name: log
          mountPath: /log
        # configuration files, can be mounted read-only once finalized
        - name: container-config
          mountPath: /config
        # # The volume where Rsyslog stores persistent data (position databases for tracking ingested files)
        # - name: fluent-data
        #   mountPath: /var/rsyslog-centralized
        # The Rsyslog config file to use
        - name: rsyslog-centralized-config
          mountPath: /rsyslog-centralized/etc
        - name: rsyslog-centralized-config-dot-d
          mountPath: /rsyslog-centralized/etc/rsyslog.d
        

        resources:
          limits:
            cpu: ".2"
            memory: "100Mi"
          requests:
            cpu: "0.05"
            memory: "10Mi"
          

        ports:
        - containerPort: 6160
          name: in-udp
          protocol: UDP
        - containerPort: 6170
          name: in-tcp
          protocol: TCP
        - containerPort: 1601
          name: in-relp
          protocol: TCP

      volumes:
      - name: work
        emptyDir: {}
      # log file store (if used)
      - name: log
        mountPath: {}
      - name: container-config
        configMap:
          name: rsyslog-centralized-container-config-0-3-0
      - name: rsyslog-centralized-config
        configMap:
          name: rsyslog-centralized-config-0-3-0
      - name: rsyslog-centralized-config-dot-d
        configMap:
          name: rsyslog-centralized-config-dot-d-0-3-0
      

      hostNetwork: True

      hostPID: True

      nodeSelector:
        beta.kubernetes.io/os: linux

      # securityContext:





#      hostNetwork: true
#      hostPID: true
#      nodeSelector:
#        beta.kubernetes.io/os: linux
#      securityContext:
#        runAsNonRoot: true
#        runAsUser: 65534
