dist/manifests/kubernetes-cluster-manifests/rsyslog-centralized/6rsyslog-centralized.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsyslog-centralized
  namespace: kube-system
  labels:
    k8s-app: rsyslog-centralized
    version: latest
    kubernetes.io/cluster-service: "true"
  # annotations:
spec:
  type: ClusterIP
  ports:
    - name: in-udp
      port: 6160
      protocol: UDP
      targetPort: in-udp
    - name: in-tcp
      port: 6170
      protocol: TCP
      targetPort: in-tcp
    - name: in-relp
      port: 1601
      protocol: TCP
      targetPort: in-relp
  selector:
    k8s-app: rsyslog-centralized
